Implementing fix for flexbox elements stretching on mobile

--- a/src/app/characters/characters.component.css
+++ b/src/app/characters/characters.component.css
@@ -77,6 +77,7 @@
   }
 
   .avatar {
+    align-self:flex-start;
     border: 1px solid #292828;
     width: 22%;
     margin-left: 0.2em;
